# MagicDexMate

./: .gitignore  README.md  pyproject.toml
assets/robots/hands/sharpa_wave/: ATTRIBUTION.md  LICENSE.txt  NOTICE.txt
assets/robots/hands/sharpa_wave/left/: left_sharpa_wave.urdf
assets/robots/hands/sharpa_wave/right/: right_sharpa_wave.urdf
configs/retargeting/: sharpa_wave_left_dexpilot.yml  sharpa_wave_left_vector.yml  sharpa_wave_right_dexpilot.yml  sharpa_wave_right_vector.yml
docs/references/: 01_wuji_glove.md  02_sharpa_wave_hand.md  03_dex_retargeting.md  04_dexmate_vega.md  05_sharpa_sim_assets.md
magicdexmate/: __init__.py  skeleton.py
magicdexmate/retarget/: README.md  builder.py  frames.py  mapping.py  natural_distal.py
magicdexmate/sinks/: qpos_publisher.py  sapien_viz.py  sharpa_real.py
magicdexmate/sources/: __init__.py  base.py  mock_source.py  wuji_source.py
plans/: 00_roadmap.md  01_retarget_plan.md  02_sim_scene_plan.md  03_sharpa_real_teleop_plan.md
scripts/: check_env.py  install_into_isaaclab.sh  prepare_assets.py  setup_env.sh  setup_isaac_env.sh  sharpa_real_runner.py  teleop_retarget.py
sim/: debug_ik_vega.py  sharpa_scene.py  teleop_dual_sharpa.py  teleop_isaac_single.py  teleop_vega_sharpa.py  test_env_sharpa.py  vega_sharpa_scene.py
tests/: test_retarget_pipeline.py
