[project]
name = "magicdexmate"
version = "0.1.0"
description = "Wuji glove -> SharpaWave teleop retargeting (real + sim)"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy>=2.0",
    "dex_retargeting",
    "pyzmq",
]

[project.optional-dependencies]
viz = ["sapien==3.0.0b0"]
glove = ["wuji-sdk"]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["magicdexmate*"]
